--- a/service.html
+++ b/service.html
@@ -44,6 +44,15 @@
         </section>
 
         <section class="cards">
+            
+            <div class="card">
+                <a href="http://www.medical.zustudents.zu.edu.eg/" target="_blank" class="card-link">
+                    <i class="fas fa-notes-medical"></i>
+                    <span data-translate="medicalCheck">تسجيل الكشف الطبي</span>
+                </a>
+                <button class="share-button" aria-label="مشاركة الرابط"><i class="fas fa-share"></i></button>
+            </div>
+
             <div class="card">
                 <a href="http://www.militaryeducation.zu.edu.eg/Views/General/GetStudInfo" target="_blank" class="card-link">
                     <i class="fas fa-user"></i>
@@ -97,4 +106,5 @@
     <script src="./AIC-Links/js/language.js"></script>
     <script src="./AIC-Links/js/share.js"></script>
 </body>
+
 </html>
