--- a/service.html
+++ b/service.html
@@ -54,6 +54,15 @@
             </div>
 
             <div class="card">
+                <a href="http://www.medical2.zustudents.zu.edu.eg/" target="_blank" class="card-link">
+                    <i class="fas fa-notes-medical"></i>
+                    <span data-translate="medicalCheck">تسجيل الكشف الطبي موقع بديل</span>
+                </a>
+                <button class="share-button" aria-label="مشاركة الرابط"><i class="fas fa-share"></i></button>
+            </div>
+
+
+            <div class="card">
                 <a href="http://www.militaryeducation.zu.edu.eg/Views/General/GetStudInfo" target="_blank" class="card-link">
                     <i class="fas fa-user"></i>
                     <span data-translate="studentNumber">الحصول على كود الطالب</span>
@@ -108,3 +117,4 @@
 </body>
 
 </html>
+
