--- a/service.html
+++ b/service.html
@@ -107,9 +107,13 @@
         </section>
     </main>
 
-    <footer>
-        <p>Created by <a href="https://www.facebook.com/AliMaherAlErian">Ali Al-3rian</a></p>
-    </footer>
+           <footer>
+              <div class="footer-container">
+                <p>&copy; <p>&copy; 2021 - 2025 جميع الحقوق محفوظة <a href="https://www.facebook.com/AliMaherAlErian" target="_blank">Ali Al-3rian</a>
+                </p>
+              </div>
+          </footer>
+
 
     <script src="./AIC-Links/js/theme.js"></script>
     <script src="./AIC-Links/js/language.js"></script>
@@ -117,4 +121,5 @@
 </body>
 
 </html>
+
 
