--- a/service.html
+++ b/service.html
@@ -109,8 +109,7 @@
 
            <footer>
               <div class="footer-container">
-                <p>&copy; <p>&copy; 2021 - 2025 جميع الحقوق محفوظة <a href="https://www.facebook.com/AliMaherAlErian" target="_blank">Ali Al-3rian</a>
-                </p>
+                <p>&copy; 2021 - 2025 جميع الحقوق محفوظة <a href="https://www.facebook.com/AliMaherAlErian" target="_blank"> Ali Al-3rian</a></p>
               </div>
           </footer>
 
@@ -121,5 +120,6 @@
 </body>
 
 </html>
+
 
 
