--- a/GPA-Calculator.html
+++ b/GPA-Calculator.html
@@ -95,9 +95,11 @@
         </div>
     </main>
 
-    <footer>
-        <p>Created by <a href="https://www.facebook.com/AliMaherAlErian">Ali Al-3rian</a></p>
-    </footer>
+        <footer>
+              <div class="footer-container">
+                <p>&copy; 2021 - 2025 جميع الحقوق محفوظة <a href="https://www.facebook.com/AliMaherAlErian" target="_blank"> Ali Al-3rian</a></p>
+              </div>
+        </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
@@ -110,4 +112,5 @@
     <script src="./GPA-Calculator/js/darkmode.js"></script>
     <script src="./GPA-Calculator/js/main.js"></script>
 </body>
+
 </html>
